--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-django = "3"
-dj-database-url = "0.5.0"
+django = "3.2"
+dj-database-url = "^2.1.0"
 psycopg2-binary = "^2.9.7"
 whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 gunicorn = "^21.2.0"
