--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dj-database-url = "^2.1.0"
 psycopg2-binary = "^2.9.7"
 whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 gunicorn = "^21.2.0"
-
+asgiref=="3.7.2"
+django-cors-headers=="4.3.1"
+pytz=="2023.3.post1"
+sqlparse==0.4.4
+typing_extensions=="4.8.0"
 
 [build-system]
 requires = ["poetry-core"]
