--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ psycopg2-binary = "2.9.7"
 sqlparse = "0.4.4"
 typing_extensions = "4.7.1"
 whitenoise = "6.5.0"
+django-cors-headers=="4.3.1"
+pytz=="2023.3.post1"
 
 [dev-packages]
 
