--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ gunicorn = "^21.2.0"
 asgiref="3.7.2"
 django-cors-headers="4.3.1"
 pytz="2023.3.post1"
-sqlparse=0.4.4
+sqlparse="0.4.4"
 typing_extensions="4.8.0"
 
 [build-system]
